src/objects/Asistencia__c.object
<CustomObject>
    <fields>
        <fullName>Alumno__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Alumno</label>
        <referenceTo>Alumno__c</referenceTo>
        <relationshipLabel>Asistencias</relationshipLabel>
        <relationshipName>Asistencias</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Clase__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Clase</label>
        <referenceTo>Clase__c</referenceTo>
        <relationshipLabel>Asistencias</relationshipLabel>
        <relationshipName>Asistencias</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Hora__c</fullName>
        <label>Hora</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <label>Asistencia</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Asistencia Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Asistencias</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>